# MathAnalyzer

./: CMakeLists.txt  README.md  expression.h  main.cpp  mathAnalyzer.cpp  mathAnalyzer.h  mathAnalyzerTest.cpp  token.cpp  token.h  tokenstream.cpp  tokenstream.h
app/: main.cpp
include/: mathAnalyzer.h
src/: expression.h  mathAnalyzer.cpp  token.cpp  token.h  tokenStream.cpp  tokenStream.h
test/: mathAnalyzerTest.cpp
